[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-tools"
version = "0.3.0"
description = "Command line tools for combininig ZARR arrays and generating the multiscale pyramid"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "dask==2025.11.0",
    "distributed==2025.11.0",
    "numpy>2,<3",
    "ome-zarr-models==1.3",
    "pydantic==2.12.4",
    "pyyaml",
    "tornado",
    "xarray-multiscale==2.1.0",
    "zarr>3,<4",
]

[tool.setuptools.packages.find]
where = ["src"]
